--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8,4 +8,114 @@
  mobile:+201207077747
 */
 
-// custom ovverides here
+// custo ovverides here
+html,
+body {
+    font-family: $open-sans;
+    font-size: 16px;
+    font-weight: $font-normal;
+    overflow-x: hidden;
+    background-color: $white;
+    height: 100%;
+}
+
+#home {
+    background-image: url("../images/main-bg.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80%;
+    //logo
+    .navbar-header {
+        a {
+            img.logo {
+                width: 50%;
+            }
+        }
+    }
+    //main menu 
+    .menu {
+        li {
+            a {
+                font-family: $raleway;
+                font-weight: $font-bold;
+                font-size: $font-sm;
+                color: #ffffff;
+                opacity: 0.8;
+                letter-spacing: 1px;
+                text-transform: uppercase;
+                background-color: transparent;
+                @media (min-width: 768px) {
+                    padding: 30px 15px;
+                }
+            }
+            .signup-btn {
+                margin-top: 24px;
+                margin-bottom: 24px;
+                color: $white;
+                opacity: 0.8;
+                background-color: transparent;
+                border-color: $white;
+                font-family: $raleway;
+                font-weight: $font-bold;
+                font-size: $font-sm;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                line-height: 1.428571;
+                border-radius: 3px;
+                &:hover {
+                    background-color: $white;
+                    color: $text-color;
+                    opacity: 1;
+                    transition-delay: 0.2s;
+                }
+            }
+        }
+    }
+}
+
+//modal sign up
+.modal-header {
+    border-bottom: none;
+}
+
+.modal-dialog {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.modal-backdrop {
+    background-color: #fff;
+    opacity: 1!important;
+    border: 10px solid rgba(136, 136, 136, .4);
+}
+
+.modal-content {
+    height: auto;
+    min-height: 100%;
+    border-radius: 0;
+    background: none;
+    box-shadow: none;
+}
+
+.modal-body {
+    text-align: center;
+}
+
+.modal-body form {
+    margin: 0 auto;
+    float: none;
+    width: 300px;
+}
+
+.modal-content .close {
+    opacity: 1;
+    font-size: 30px;
+}
+
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+    border: none;
+}
